2010-07-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* interopProvider.c
	[ 3003509 ] sfcb must configure IndicationFilterName 
	(based on patch by sto)

2010-07-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3010272 ] Indication providers always unloaded when idle

2010-07-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3017845 ] disableIndications not called on provider shutdown

	* indCIMXMLHandler.c:
	[ 2952628 ] Handler is not removed from interop-Hashtable when CI fails
	(based on patch by Till Steinbach)

	* profileProvider.c:
	[ 3022919 ] profileProvider (SLP) has increasing memory usage over time

	* brokerUpc.c:
	[ 3004385 ] Improve performance for association upcall
	(patch by Wenhua Liu)

2010-06-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* test/unittest/Makefile.am, test/unittest/genericlist.c:
	[ 2859885 ] New XML Test Cases
	(removed genericlist.c as it was not useful.)

2010-06-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* classProvider.c classProviderGz.c classProviderSf.c classProviderMem.c
	  cmpiftx.h constClass.h constClass.c providerDrv.c:
	[ 1765781 ] sfcb: intrinsic ClassMI prototypes omit const qualifier

	* cimXmlRequest.c:
	[ 3023502 ] Memory leak on CreateClass

	* indCIMXMLHandler.c:
	[ 2950545 ] indCIMXMLHandler destination schema correction wrong
	(proposed by Till Steinbach)

	* cimcClientSfcbLocal.c:
	[ 2968599 ] Wrong trace msg for invokeMethod (local interface)
        (patch by Klaus Kaempf)

2010-06-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectImpl.c:
	[ 3016863 ] Data corruption when replacing array properties

	[ 3023072 ] Remove extra getStrBufPtr call in replaceClString

	* cimslp.c, cimslpSLP.c:
	[ 3022941 ] Remove HAVE_SLP_ALONE sections

	* profileProvider.c, cimslpCMPI.c:
	[ 3022934 ] SLP code calls setupControl more than once

	* profileProvider.c: 
	[ 3023079 ] slpUpdate does not release ctx on exit
